[package]
name = "panda"
version = "0.1.0"
edition = "2021"
authors = ["Richard <wangleihd@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/limitoo/panda"
homepage = "https://limitoo.com"
description = "The panda is api server."


[dependencies]
axum = '0.5.4'
tokio = { version = "1.18.1", features = ["full"] }
sqlx = { version = "0.5.13", features = ["mysql", "runtime-tokio-rustls"] }
tower = {version = "0.4.12", features = ["full"]}
tower-http = { version = "0.3.2", features = ["full"] }
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"