[package]
name = "panda"
version = "0.1.0"
edition = "2021"
authors = ["Richard <wangleihd@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/limitoo/panda"
homepage = "https://limitoo.com"
description = "The panda is api server."


[dependencies]
axum = '0.5.13'
tokio = { version = "1.20.0", features = ["full"] }
sqlx = { version = "0.6.0", features = ["mysql", "chrono", "runtime-tokio-rustls"] }
tower = {version = "0.4.13", features = ["full"]}
tower-http = { version = "0.3.4", features = ["full"] }
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
redis = { version = "0.21.5", features = ["tokio-comp", "aio"] }
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
nanoid = '0.4.0'
